--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "react": "18.2.0",
