--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@next/font": "13.1.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "next": "13.1.6",
     "postcss": "^8.4.21",
     "react": "18.2.0",
