--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,14 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": [
+      "node",
+      "jest",
+      "@types/jest",
+      "@types/testing-library__jest-dom",
+      "@testing-library/jest-dom"
+    ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
