--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: "18"
       - run: npm install
-      - run: npm run test
+      - run: npm run test2
 
       - name: Tests ✅
         if: ${{ success() }}
